// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PathoscopeIsolate /> should render 1`] = `
<Isolate__StyledPathoscopeIsolate>
  <Isolate__PathoscopeIsolateHeader>
    Isolate A
    <PathoscopeIsolateWeight
      pi={0.712}
      reads={102}
      showPathoscopeReads={false}
    />
    <Isolate__PathoscopeIsolateDepth>
      13
    </Isolate__PathoscopeIsolateDepth>
    <Isolate__PathoscopeIsolateCoverage>
      NaN
    </Isolate__PathoscopeIsolateCoverage>
  </Isolate__PathoscopeIsolateHeader>
  <ScrollSyncPane
    enabled={true}
    group="default"
  >
    <Isolate__PathoscopeChartRibbon>
      <CoverageChart
        definition="Foo Hit"
        id="foo"
        key="0"
        length={5}
        showYAxis={true}
        yMax={22}
      />
      <CoverageChart
        definition="Bar Hit"
        id="bar"
        key="1"
        length={8}
        showYAxis={false}
        yMax={22}
      />
    </Isolate__PathoscopeChartRibbon>
  </ScrollSyncPane>
</Isolate__StyledPathoscopeIsolate>
`;

exports[`<PathoscopeIsolate /> should render read count 1`] = `
<Isolate__StyledPathoscopeIsolate>
  <Isolate__PathoscopeIsolateHeader>
    Isolate A
    <PathoscopeIsolateWeight
      pi={0.712}
      reads={102}
      showPathoscopeReads={true}
    />
    <Isolate__PathoscopeIsolateDepth>
      13
    </Isolate__PathoscopeIsolateDepth>
    <Isolate__PathoscopeIsolateCoverage>
      NaN
    </Isolate__PathoscopeIsolateCoverage>
  </Isolate__PathoscopeIsolateHeader>
  <ScrollSyncPane
    enabled={true}
    group="default"
  >
    <Isolate__PathoscopeChartRibbon>
      <CoverageChart
        definition="Foo Hit"
        id="foo"
        key="0"
        length={5}
        showYAxis={true}
        yMax={22}
      />
      <CoverageChart
        definition="Bar Hit"
        id="bar"
        key="1"
        length={8}
        showYAxis={false}
        yMax={22}
      />
    </Isolate__PathoscopeChartRibbon>
  </ScrollSyncPane>
</Isolate__StyledPathoscopeIsolate>
`;

exports[`<PathoscopeIsolateWeight /> should render reads 1`] = `
<Isolate__StyledPathoscopeIsolateWeight>
  121
</Isolate__StyledPathoscopeIsolateWeight>
`;

exports[`<PathoscopeIsolateWeight /> should render weight 1`] = `
<Isolate__StyledPathoscopeIsolateWeight>
  0.321
</Isolate__StyledPathoscopeIsolateWeight>
`;

exports[`<PathoscopeIsolateWeight /> should render weight in scientific notation 1`] = `
<Isolate__StyledPathoscopeIsolateWeight>
  3.21E-7
</Isolate__StyledPathoscopeIsolateWeight>
`;
